--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -153,7 +153,96 @@ margin-bottom: 1rem;
 
 /* end of Top section css */
 
-  
+
+/* bottom-section css */
+
+.bottom-section-desktop-tablet{
+    position: absolute;
+    height: 30.278rem;
+    width: 61.61rem;
+    left: 9.278;
+    top: 54rem;
+    border-radius: 0.833rem;
+    background-color:#172339;
+    display: flex;
+   
+
+}
+
+.image-jeremy{
+    
+    height: 32.753rem;
+    width: 19.989rem;
+}
+
+
+.image-jeremy img{
+    position: relative;
+    left: 6.749rem;
+    bottom: 2.475rem;
+    width: auto;
+    height: 100%;
+
+}
+
+.curved-image{
+    position: relative;
+    top: 9rem;
+    left: 9rem;
+    height: 52px;
+width: 64.0488510131836px;
+
+border-radius: 0px;
+
+}
+
+
+.right-text{
+    display: flex;
+    flex-direction: column;
+    color:  #FAF8F6;
+    justify-content: space-evenly;
+    /* position: relative;
+    left: 10rem; */
+    margin-left: 12.22rem;
+    margin-right: 7rem;
+}
+ 
+
+.right-text h2{
+font-weight: 400rem;
+font-size: 2.67rem;
+line-height: 3.1rem;
+}
+
+.right-text p{
+    color: #F3EDE7;
+    font-weight: 400;
+    font-size: 1.11rem;
+    line-height: 1.94rem ;
+    width: 19.44rem;
+}
+
+.right-text h3{
+    font-weight: 700;
+    font-size: 1rem;
+    line-height: 1.77;
+    color: #FAF8F6;
+}
+
+.right-text h4{
+
+    font-weight: 400;
+    font-size: 0.889rem;
+    letter-spacing: 0.1389rem;
+    color: #F3EDE7;
+}
+
+.image-jeremy-tablet{
+    display: none;
+}
+
+/* end of bottom css */
 }
 
 
@@ -290,6 +379,97 @@ margin-bottom: 1rem;
 
 
 /* end of Top section css */
+
+
+/* bottom-section css */
+
+.bottom-section-desktop-tablet{
+    position: absolute;
+    height: 30.278rem;
+    width: 61.61rem;
+    left: 9.278;
+    top: 54rem;
+    border-radius: 0.833rem;
+    background-color:#172339;
+    display: flex;
+   
+
+}
+
+.image-jeremy{
+    
+    height: 32.753rem;
+    width: 19.989rem;
+}
+
+
+.image-jeremy img{
+    position: relative;
+    left: 6.749rem;
+    bottom: 2.475rem;
+    width: auto;
+    height: 100%;
+
+}
+
+.curved-image{
+    position: relative;
+    top: 9rem;
+    left: 9rem;
+    height: 52px;
+width: 64.0488510131836px;
+
+border-radius: 0px;
+
+}
+
+
+.right-text{
+    display: flex;
+    flex-direction: column;
+    color:  #FAF8F6;
+    justify-content: space-evenly;
+    /* position: relative;
+    left: 10rem; */
+    margin-left: 12.22rem;
+    margin-right: 7rem;
+}
+ 
+
+.right-text h2{
+font-weight: 400rem;
+font-size: 2.67rem;
+line-height: 3.1rem;
+}
+
+.right-text p{
+    color: #F3EDE7;
+    font-weight: 400;
+    font-size: 1.11rem;
+    line-height: 1.94rem ;
+    width: 19.44rem;
+}
+
+.right-text h3{
+    font-weight: 700;
+    font-size: 1rem;
+    line-height: 1.77;
+    color: #FAF8F6;
+}
+
+.right-text h4{
+
+    font-weight: 400;
+    font-size: 0.889rem;
+    letter-spacing: 0.1389rem;
+    color: #F3EDE7;
+}
+
+.image-jeremy-tablet{
+    display: none;
+}
+
+/* end of bottom css */
   
 }
 
@@ -447,6 +627,27 @@ top: 12.1489;
 }
 
 /* end of top-section css */
+
+
+/* bottom-section css */
+
+/* .image-jeremy{
+    display: none;
+}
+
+
+.bottom-section-desktop-tablet{
+    position: absolute;
+    height: 30.278rem;
+    width: 61.61rem;
+    left: 9.278;
+    top: 54rem;
+    border-radius: 0.833rem;
+    background-color:#172339;
+    display: flex;
+   
+
+} */
 
 }
 
