--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -172,6 +172,7 @@ margin-bottom: 1rem;
     background-color:#172339;
     display: flex;
    
+   
 
 }
 
@@ -247,8 +248,55 @@ line-height: 3.1rem;
 
 .image-jeremy-mobile{display: none;}
 /* end of bottom css */
+
+
+
+/* footer */
+
+main{
+    position: absolute;
+    z-index: 200;
+}
+footer{
+    position:  absolute;
+    height: 25.778rem;
+    width: 100%;
+    top: 69.55rem;
+    background-color: #F3EDE7;
+    z-index: 100;
 }
 
+.footer-items{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    width: 61.61rem;
+    height: 1.78rem;
+    left: 7rem;
+    bottom: 4rem;
+}
+
+.copyright-info span{
+    font-size: 0.83rem;
+    font-weight: 400;
+    line-height: 1.78rem;
+}
+
+.footer-socials ul li{
+    display: inline;
+    padding: 0.5rem;
+   
+  
+}
+
+}
+
+.footer-logo{
+font-size: 1.78rem;
+font-weight: 700;
+line-height: 1.78rem;
+}
 
 /* 
   Device = Laptops, Desktops
