--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,7 +18,10 @@ body{
    
 }
 
-
+main{
+    
+    z-index: 200;
+}
 
 
 /* 
@@ -253,10 +256,7 @@ line-height: 3.1rem;
 
 /* footer */
 
-main{
-    position: absolute;
-    z-index: 200;
-}
+
 footer{
     position:  absolute;
     height: 25.778rem;
@@ -290,13 +290,17 @@ footer{
   
 }
 
-}
-
 .footer-logo{
 font-size: 1.78rem;
 font-weight: 700;
 line-height: 1.78rem;
 }
+
+}
+
+
+
+
 
 /* 
   Device = Laptops, Desktops
@@ -521,6 +525,47 @@ line-height: 3.1rem;
 .image-jeremy-mobile{display: none;}
 
 /* end of bottom css */
+
+/* footer */
+
+footer{
+    position:  absolute;
+    height: 25.778rem;
+    width: 100%;
+    top: 69.55rem;
+    background-color: #F3EDE7;
+    z-index: 100;
+}
+
+.footer-items{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    width: 61.61rem;
+    height: 1.78rem;
+    left: 7rem;
+    bottom: 4rem;
+}
+
+.copyright-info span{
+    font-size: 0.83rem;
+    font-weight: 400;
+    line-height: 1.78rem;
+}
+
+.footer-socials ul li{
+    display: inline;
+    padding: 0.5rem;
+   
+  
+}
+
+.footer-logo{
+font-size: 1.78rem;
+font-weight: 700;
+line-height: 1.78rem;
+}
   
 }
 
@@ -781,7 +826,47 @@ line-height: 2.667rem;
 .image-jeremy-mobile{display: none;}
 /* end of bottom section */
 
+/* footer */
 
+
+footer{
+    position:  absolute;
+    height: 35.56rem;
+    width: 100%;
+    top: 73.44rem; 
+    background-color: #F3EDE7;
+    z-index: 100;
+}
+
+.footer-items{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    width: 38.278rem;
+    height:1.78rem;
+    left: 2.3rem;
+    bottom: 4rem;
+}
+
+.copyright-info span{
+    font-size: 0.83rem;
+    font-weight: 400;
+    line-height: 1.78rem;
+}
+
+.footer-socials ul li{
+    display: inline;
+    padding: 0.5rem;
+   
+  
+}
+
+.footer-logo{
+font-size: 1.78rem;
+font-weight: 700;
+line-height: 1.78rem;
+}
 }
 
 
