--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1110,11 +1110,54 @@ line-height: 2.667rem;
      display: flex;
      flex-direction: column;
      /* margin: 0.8rem; */
-     justify-content: space-evenly;
-     
-     
-    
+     justify-content: space-evenly;  
 }  
 
+
+/* footer */
+
+
+footer{
+    position:  absolute;
+    width: 20.94rem;
+    height: 23.33rem;
+    top: 109.389rem;
+    background-color: #F3EDE7;
+    z-index: 100;
+}
+
+.footer-items{
+  
+    position: absolute;
+    height: 150px;
+    width: 125px;
+    left: 124.5px;
+    /* bottom: 4.44rem; */
+    top: 13.56rem;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.copyright-info span{
+    font-size: 0.83rem;
+    font-weight: 400;
+    line-height: 1.78rem;
+}
+
+.footer-socials ul li{
+    display: inline;
+    padding: 0.5rem;
+   
+  
+}
+
+.footer-logo{
+font-size: 1.78rem;
+font-weight: 700;
+line-height: 1.78rem;
+}
 }
 
