--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1119,7 +1119,7 @@ line-height: 2.667rem;
 
 footer{
     position:  absolute;
-    width: 20.94rem;
+    width: 100%;
     height: 23.33rem;
     top: 109.389rem;
     background-color: #F3EDE7;
